--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,10 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
     "swiper": "^11.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@react-three/drei": "^9.88.11",
+    "@react-three/fiber": "^8.15.9",
+    "three": "^0.157.0"
   },
   "scripts": {
     "start": "react-scripts start",
